# prometheus-client-histogram-label

./: Main.hs  prometheus-client-example.cabal  run.sh  stack.yaml
