name:                prometheus-client-example
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable prometheus-client-example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , prometheus-client
                     , bytestring
                     , http-types
                     , prometheus-client
                     , random
                     , wai
                     , wai-middleware-prometheus
                     , warp
  ghc-options: -Wall -threaded -with-rtsopts=-N